Ajustes de testes unitários